--- a/harga barang/assets/site/tambah.html
+++ b/harga barang/assets/site/tambah.html
@@ -143,6 +143,7 @@
 		$('.hapus').each(function(){
 			$(this).click(function(){
 				$(this).parent().find('.form-control').val('')
+				$('.hasil-pencarian-item').removeClass('sembunyi')
 			})
 		})
 	</script>
