--- a/kebutuhan keinginan/assets/index.html
+++ b/kebutuhan keinginan/assets/index.html
@@ -2,4 +2,16 @@
 layout: default
 ---
 
-Tes
+<div class="progress">
+	<div class="progress-bar progress-kebutuhan" style="width: 0%;"></div>
+</div>
+<div class="panel panel-success">
+	<div class="panel-heading">Kebutuhan</div>
+	<div class="panel-body">Rp <span class="nilai-kebutuhan">0</span></div>
+</div>
+<div class="panel panel-danger">
+	<div class="panel-heading">Keinginan</div>
+	<div class="panel-body">Rp <span class="nilai-keinginan">0</span></div>
+</div>
+<a href="kebutuhan.html" class="btn btn-success">&plus; Kebutuhan</a>
+<a href="keinginan.html" class="btn btn-danger">&plus; Keinginan</a>
