--- a/kebutuhan keinginan/assets/keinginan.html
+++ b/kebutuhan keinginan/assets/keinginan.html
@@ -7,7 +7,7 @@ layout: default
 	<div class="form-group">
 		<div class="input-group">
 			<div class="input-group-addon">Rp</div>
-			<input type="tel" name="" id="" class="form-control input-kebutuhan" required="">
+			<input type="tel" name="" id="" class="form-control input-keinginan" required="">
 			<div class="input-group-addon">000</div>
 		</div>
 	</div>
