--- a/kebutuhan keinginan/assets/keinginan.html
+++ b/kebutuhan keinginan/assets/keinginan.html
@@ -12,6 +12,6 @@ layout: default
 		</div>
 	</div>
 	<div class="form-group">
-		<input type="submit" value="Oke" class="btn btn-default">
+		<input type="submit" value="Oke" class="btn btn-danger">
 	</div>
 </form>
