--- a/quran pengajian/assets/index.html
+++ b/quran pengajian/assets/index.html
@@ -63,6 +63,10 @@
 
 	<div class="container">
 		<br>
+
+		<div class="list-group">
+			<a href="#!" class="list-group-item halaman-terakhir">Halaman Terakhir</a>		
+		</div>
  
 <div class="list-group">
 	
