--- a/copy paste/assets/index.html
+++ b/copy paste/assets/index.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 
+<table class="table table-bordered">
+	<tbody class="data-di-sini"></tbody>
+</table>
+
 <div class="navbar navbar-default navbar-fixed-bottom">
 	<div class="container">
 		<table class="table table-bordered">
@@ -9,7 +13,7 @@ layout: default
 				<tr>
 					<td>
 						<div class="input-group">
-							<input type="text" class="form-control">
+							<input type="text" class="form-control cari">
 							<div class="input-group-addon hapus">x</div>
 						</div>
 					</td>
