--- a/copy paste/assets/tambah.html
+++ b/copy paste/assets/tambah.html
@@ -4,9 +4,9 @@ layout: default
 
 <p><strong>Tambah Data</strong></p>
 
-<form action="">
+<form action="" class="tambah-data">
 	<div class="form-group">
-		<textarea name="" id="" cols="30" rows="15" class="form-control" required=""></textarea>
+		<textarea name="" id="" cols="30" rows="15" class="form-control isi" required=""></textarea>
 	</div>
 	<div class="form-group">
 		<input type="submit" value="Simpan" class="btn btn-success">
