--- a/pembukuan/assets/index.html
+++ b/pembukuan/assets/index.html
@@ -2,4 +2,16 @@
 layout: default
 ---
 
-hello
+<div class="navbar navbar-default navbar-fixed-bottom">
+	<div class="container">
+		<table class="table table-bordered">
+			<tbody>
+				<tr>
+					<td>
+						<a href="tambah.html" class="btn btn-default">Tambah</a>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</div>
