--- a/pembukuan/assets/index.html
+++ b/pembukuan/assets/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+file: index
 ---
 
 <div>
@@ -27,6 +28,9 @@ layout: default
 				<tr>
 					<td>
 						<a href="tambah.html" class="btn btn-default">Tambah</a>
+					</td>
+					<td>
+						<a href="semua.html" class="btn btn-default">Semua</a>
 					</td>
 				</tr>
 			</tbody>
