--- a/pembukuan/assets/tambah.html
+++ b/pembukuan/assets/tambah.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+file: tambah
 ---
 
 <h3>Tambah Pendapatan</h3>
@@ -37,6 +38,9 @@ layout: default
 				<tr>
 					<td>
 						<a href="index.html" class="btn btn-default">Beranda</a>
+					</td>
+					<td>
+						<a href="semua.html" class="btn btn-default">Semua</a>
 					</td>
 				</tr>
 			</tbody>
