--- a/pembukuan/assets/tambah.html
+++ b/pembukuan/assets/tambah.html
@@ -27,23 +27,10 @@ file: tambah
 		</div>
 	</div>
 	<div class="form-group">
+		<label for="">Tanggal</label>
+		<input type="date" class="form-control tanggal" required="">
+	</div>
+	<div class="form-group">
 		<input type="submit" value="Tambah" class="btn btn-success">
 	</div>
 </form>
-
-<div class="navbar navbar-default navbar-fixed-bottom">
-	<div class="container">
-		<table class="table table-bordered">
-			<tbody>
-				<tr>
-					<td>
-						<a href="index.html" class="btn btn-default">Beranda</a>
-					</td>
-					<td>
-						<a href="semua.html" class="btn btn-default">Semua</a>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-</div>
