--- a/quran pengajian/assets/1.html
+++ b/quran pengajian/assets/1.html
@@ -122,7 +122,7 @@
 			<h4 class="isi">(yaitu) Jalan orang-orang yang telah Engkau beri nikmat kepada mereka; bukan (jalan) mereka yang dimurkai dan bukan (pula jalan) mereka yang sesat.</h4>
 		</div>
 	</div>
-
+	<p><a href="2.html?bagian_2_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
