--- a/quran pengajian/assets/100.html
+++ b/quran pengajian/assets/100.html
@@ -162,7 +162,7 @@
 			<h4 class="isi">sesungguhnya Tuhan mereka pada hari itu Maha Mengetahui keadaan mereka.</h4>
 		</div>
 	</div>
-
+	<p><a href="101.html?bagian_101_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
