--- a/quran pengajian/assets/103.html
+++ b/quran pengajian/assets/103.html
@@ -82,7 +82,7 @@
 			<h4 class="isi">kecuali orang-orang yang beriman dan mengerjakan amal saleh dan nasehat menasehati supaya mentaati kebenaran dan nasehat menasehati supaya menetapi kesabaran.</h4>
 		</div>
 	</div>
-
+	<p><a href="104.html?bagian_104_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
