--- a/quran pengajian/assets/104.html
+++ b/quran pengajian/assets/104.html
@@ -142,7 +142,7 @@
 			<h4 class="isi">(sedang mereka itu) diikat pada tiang-tiang yang panjang.</h4>
 		</div>
 	</div>
-
+	<p><a href="105.html?bagian_105_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
