--- a/quran pengajian/assets/10.html
+++ b/quran pengajian/assets/10.html
@@ -1142,7 +1142,7 @@
 			<h4 class="isi">Dan ikutilah apa yang diwahyukan kepadamu, dan bersabarlah hingga Allah memberi keputusan dan Dia adalah Hakim yang sebaik-baiknya.</h4>
 		</div>
 	</div>
-
+	<p><a href="11.html?bagian_11_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
