--- a/quran pengajian/assets/111.html
+++ b/quran pengajian/assets/111.html
@@ -102,7 +102,7 @@
 			<h4 class="isi">Yang di lehernya ada tali dari sabut.</h4>
 		</div>
 	</div>
-
+	<p><a href="112.html?bagian_112_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
