--- a/quran pengajian/assets/110.html
+++ b/quran pengajian/assets/110.html
@@ -82,7 +82,7 @@
 			<h4 class="isi">maka bertasbihlah dengan memuji Tuhanmu dan mohonlah ampun kepada-Nya. Sesungguhnya Dia adalah Maha Penerima taubat.</h4>
 		</div>
 	</div>
-
+	<p><a href="111.html?bagian_111_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
