--- a/quran pengajian/assets/112.html
+++ b/quran pengajian/assets/112.html
@@ -92,7 +92,7 @@
 			<h4 class="isi">dan tidak ada seorangpun yang setara dengan Dia'.</h4>
 		</div>
 	</div>
-
+	<p><a href="113.html?bagian_113_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
