--- a/quran pengajian/assets/113.html
+++ b/quran pengajian/assets/113.html
@@ -102,7 +102,7 @@
 			<h4 class="isi">dan dari kejahatan pendengki bila ia dengki'.</h4>
 		</div>
 	</div>
-
+	<p><a href="114.html?bagian_114_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
