--- a/quran pengajian/assets/15.html
+++ b/quran pengajian/assets/15.html
@@ -1042,7 +1042,7 @@
 			<h4 class="isi">dan sembahlah Tuhanmu sampai datang kepadamu yang diyakini (ajal).</h4>
 		</div>
 	</div>
-
+	<p><a href="16.html?bagian_16_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
