--- a/quran pengajian/assets/17.html
+++ b/quran pengajian/assets/17.html
@@ -1162,7 +1162,7 @@
 			<h4 class="isi">Dan katakanlah: 'Segala puji bagi Allah Yang tidak mempunyai anak dan tidak mempunyai sekutu dalam kerajaan-Nya dan Dia bukan pula hina yang memerlukan penolong dan agungkanlah Dia dengan pengagungan yang sebesar-besarnya.</h4>
 		</div>
 	</div>
-
+	<p><a href="18.html?bagian_18_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
