--- a/quran pengajian/assets/18.html
+++ b/quran pengajian/assets/18.html
@@ -1152,7 +1152,7 @@
 			<h4 class="isi">Katakanlah: Sesungguhnya aku ini manusia biasa seperti kamu, yang diwahyukan kepadaku: 'Bahwa sesungguhnya Tuhan kamu itu adalah Tuhan yang Esa'. Barangsiapa mengharap perjumpaan dengan Tuhannya, maka hendaklah ia mengerjakan amal yang saleh dan janganlah ia mempersekutukan seorangpun dalam beribadat kepada Tuhannya'.</h4>
 		</div>
 	</div>
-
+	<p><a href="19.html?bagian_19_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
