--- a/quran pengajian/assets/19.html
+++ b/quran pengajian/assets/19.html
@@ -1032,7 +1032,7 @@
 			<h4 class="isi">Dan berapa banyak telah Kami binasakan umat-umat sebelum mereka. Adakah kamu melihat seorangpun dari mereka atau kamu dengar suara mereka yang samar-samar?</h4>
 		</div>
 	</div>
-
+	<p><a href="20.html?bagian_20_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
