--- a/quran pengajian/assets/23.html
+++ b/quran pengajian/assets/23.html
@@ -1232,7 +1232,7 @@
 			<h4 class="isi">Dan katakanlah: 'Ya Tuhanku berilah ampun dan berilah rahmat, dan Engkau adalah Pemberi rahmat Yang Paling baik'.</h4>
 		</div>
 	</div>
-
+	<p><a href="24.html?bagian_24_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
