--- a/quran pengajian/assets/25.html
+++ b/quran pengajian/assets/25.html
@@ -822,7 +822,7 @@
 			<h4 class="isi">Katakanlah (kepada orang-orang musyrik): 'Tuhanku tidak mengindahkan kamu, melainkan kalau ada ibadatmu. (Tetapi bagaimana kamu beribadat kepada-Nya), padahal kamu sungguh telah mendustakan-Nya? karena itu kelak (azab) pasti (menimpamu)'.</h4>
 		</div>
 	</div>
-
+	<p><a href="26.html?bagian_26_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
