--- a/quran pengajian/assets/26.html
+++ b/quran pengajian/assets/26.html
@@ -2322,7 +2322,7 @@
 			<h4 class="isi">kecuali orang-orang (penyair-penyair) yang beriman dan beramal saleh dan banyak menyebut Allah dan mendapat kemenangan sesudah menderita kezaliman. Dan orang-orang yang zalim itu kelak akan mengetahui ke tempat mana mereka akan kembali.</h4>
 		</div>
 	</div>
-
+	<p><a href="27.html?bagian_27_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
