--- a/quran pengajian/assets/28.html
+++ b/quran pengajian/assets/28.html
@@ -932,7 +932,7 @@
 			<h4 class="isi"> Janganlah kamu sembah di samping (menyembah) Allah, tuhan apapun yang lain. Tidak ada Tuhan (yang berhak disembah) melainkan Dia. Tiap-tiap sesuatu pasti binasa, kecuali Allah. Bagi-Nya-lah segala penentuan, dan hanya kepada-Nya-lah kamu dikembalikan.</h4>
 		</div>
 	</div>
-
+	<p><a href="29.html?bagian_29_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
