--- a/quran pengajian/assets/29.html
+++ b/quran pengajian/assets/29.html
@@ -742,7 +742,7 @@
 			<h4 class="isi">Dan orang-orang yang berjihad untuk (mencari keridhaan) Kami, benar-benar akan Kami tunjukkan kepada mereka jalan-jalan Kami. Dan sesungguhnya Allah benar-benar beserta orang-orang yang berbuat baik.</h4>
 		</div>
 	</div>
-
+	<p><a href="30.html?bagian_30_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
