--- a/quran pengajian/assets/30.html
+++ b/quran pengajian/assets/30.html
@@ -652,7 +652,7 @@
 			<h4 class="isi">Dan bersabarlah kamu, sesungguhnya janji Allah adalah benar dan sekali-kali janganlah orang-orang yang tidak meyakini (kebenaran ayat-ayat Allah) itu menggelisahkan kamu.</h4>
 		</div>
 	</div>
-
+	<p><a href="31.html?bagian_31_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
