--- a/quran pengajian/assets/34.html
+++ b/quran pengajian/assets/34.html
@@ -592,7 +592,7 @@
 			<h4 class="isi">Dan dihalangi antara mereka dengan apa yang mereka ingini sebagaimana yang dilakukan terhadap orang-orang yang serupa dengan mereka pada masa dahulu. Sesungguhnya mereka dahulu (di dunia) dalam keraguan yang mendalam.</h4>
 		</div>
 	</div>
-
+	<p><a href="35.html?bagian_35_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
