--- a/quran pengajian/assets/36.html
+++ b/quran pengajian/assets/36.html
@@ -882,7 +882,7 @@
 			<h4 class="isi">Maka Maha Suci (Allah) yang di tangan-Nya kekuasaaan atas segala sesuatu dan kepada-Nya-lah kamu dikembalikan.</h4>
 		</div>
 	</div>
-
+	<p><a href="37.html?bagian_37_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
