--- a/quran pengajian/assets/37.html
+++ b/quran pengajian/assets/37.html
@@ -1872,7 +1872,7 @@
 			<h4 class="isi">Dan segala puji bagi Allah Tuhan seru sekalian alam.</h4>
 		</div>
 	</div>
-
+	<p><a href="38.html?bagian_38_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
