--- a/quran pengajian/assets/40.html
+++ b/quran pengajian/assets/40.html
@@ -902,7 +902,7 @@
 			<h4 class="isi">Maka iman mereka tiada berguna bagi mereka tatkala mereka telah melihat siksa Kami. Itulah sunnah Allah yang telah berlaku terhadap hamba-hamba-Nya. Dan di waktu itu binasalah orang-orang kafir.</h4>
 		</div>
 	</div>
-
+	<p><a href="41.html?bagian_41_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
