--- a/quran pengajian/assets/41.html
+++ b/quran pengajian/assets/41.html
@@ -592,7 +592,7 @@
 			<h4 class="isi">Ingatlah bahwa sesungguhnya mereka adalah dalam keraguan tentang pertemuan dengan Tuhan mereka. Ingatlah bahwa sesungguhnya Dia Maha Meliputi segala sesuatu.</h4>
 		</div>
 	</div>
-
+	<p><a href="42.html?bagian_42_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
