--- a/quran pengajian/assets/45.html
+++ b/quran pengajian/assets/45.html
@@ -422,7 +422,7 @@
 			<h4 class="isi">Dan bagi-Nya-lah keagungan di langit dan bumi, Dialah Yang Maha Perkasa lagi Maha Bijaksana.</h4>
 		</div>
 	</div>
-
+	<p><a href="46.html?bagian_46_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
