--- a/quran pengajian/assets/51.html
+++ b/quran pengajian/assets/51.html
@@ -652,7 +652,7 @@
 			<h4 class="isi">Maka kecelakaanlah bagi orang-orang yang kafir pada hari yang diancamkan kepada mereka.</h4>
 		</div>
 	</div>
-
+	<p><a href="52.html?bagian_52_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
