--- a/quran pengajian/assets/52.html
+++ b/quran pengajian/assets/52.html
@@ -542,7 +542,7 @@
 			<h4 class="isi">dan bertasbihlah kepada-Nya pada beberapa saat di malam hari dan di waktu terbenam bintang-bintang (di waktu fajar).</h4>
 		</div>
 	</div>
-
+	<p><a href="53.html?bagian_53_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
