--- a/quran pengajian/assets/54.html
+++ b/quran pengajian/assets/54.html
@@ -602,7 +602,7 @@
 			<h4 class="isi">di tempat yang disenangi di sisi Tuhan Yang Berkuasa.</h4>
 		</div>
 	</div>
-
+	<p><a href="55.html?bagian_55_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
