--- a/quran pengajian/assets/55.html
+++ b/quran pengajian/assets/55.html
@@ -832,7 +832,7 @@
 			<h4 class="isi">Maha Agung nama Tuhanmu Yang Mempunyai Kebesaran dan Karunia.</h4>
 		</div>
 	</div>
-
+	<p><a href="56.html?bagian_56_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
