--- a/quran pengajian/assets/6.html
+++ b/quran pengajian/assets/6.html
@@ -1702,7 +1702,7 @@
 			<h4 class="isi">Dan Dialah yang menjadikan kamu penguasa-penguasa di bumi dan Dia meninggikan sebahagian kamu atas sebahagian (yang lain) beberapa derajat, untuk mengujimu tentang apa yang diberikan-Nya kepadamu. Sesungguhnya Tuhanmu amat cepat siksaan-Nya dan sesungguhnya Dia Maha Pengampun lagi Maha Penyayang.</h4>
 		</div>
 	</div>
-
+	<p><a href="7.html?bagian_7_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
