--- a/quran pengajian/assets/60.html
+++ b/quran pengajian/assets/60.html
@@ -182,7 +182,7 @@
 			<h4 class="isi">Hai orang-orang yang beriman, janganlah kamu jadikan penolongmu kaum yang dimurkai Allah. Sesungguhnya mereka telah putus asa terhadap negeri akhirat sebagaimana orang-orang kafir yang telah berada dalam kubur berputus asa.</h4>
 		</div>
 	</div>
-
+	<p><a href="61.html?bagian_61_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
