--- a/quran pengajian/assets/62.html
+++ b/quran pengajian/assets/62.html
@@ -162,7 +162,7 @@
 			<h4 class="isi">Dan apabila mereka melihat perniagaan atau permainan, mereka bubar untuk menuju kepadanya dan mereka tinggalkan kamu sedang berdiri (berkhotbah). Katakanlah: 'Apa yang di sisi Allah lebih baik daripada permainan dan perniagaan', dan Allah Sebaik-baik Pemberi rezeki.</h4>
 		</div>
 	</div>
-
+	<p><a href="63.html?bagian_63_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
