--- a/quran pengajian/assets/42.html
+++ b/quran pengajian/assets/42.html
@@ -582,7 +582,7 @@
 			<h4 class="isi">(Yaitu) jalan Allah yang kepunyaan-Nya segala apa yang ada di langit dan apa yang ada di bumi. Ingatlah, bahwa kepada Allah-lah kembali semua urusan.</h4>
 		</div>
 	</div>
-
+	<p><a href="43.html?bagian_43_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
