--- a/quran pengajian/assets/44.html
+++ b/quran pengajian/assets/44.html
@@ -642,7 +642,7 @@
 			<h4 class="isi">Maka tunggulah; sesungguhnya mereka itu menunggu (pula).</h4>
 		</div>
 	</div>
-
+	<p><a href="45.html?bagian_45_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
