--- a/quran pengajian/assets/47.html
+++ b/quran pengajian/assets/47.html
@@ -432,7 +432,7 @@
 			<h4 class="isi">Ingatlah, kamu ini orang-orang yang diajak untuk menafkahkan (hartamu) pada jalan Allah. Maka di antara kamu ada yang kikir, dan siapa yang kikir sesungguhnya dia hanyalah kikir terhadap dirinya sendiri. Dan Allah-lah yang Maha Kaya sedangkan kamulah orang-orang yang berkehendak (kepada-Nya); dan jika kamu berpaling niscaya Dia akan mengganti (kamu) dengan kaum yang lain; dan mereka tidak akan seperti kamu ini.</h4>
 		</div>
 	</div>
-
+	<p><a href="48.html?bagian_48_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
