--- a/quran pengajian/assets/5.html
+++ b/quran pengajian/assets/5.html
@@ -1252,7 +1252,7 @@
 			<h4 class="isi">Kepunyaan Allah-lah kerajaan langit dan bumi dan apa yang ada di dalamnya; dan Dia Maha Kuasa atas segala sesuatu.</h4>
 		</div>
 	</div>
-
+	<p><a href="6.html?bagian_6_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
