--- a/quran pengajian/assets/50.html
+++ b/quran pengajian/assets/50.html
@@ -502,7 +502,7 @@
 			<h4 class="isi">Kami lebih mengetahui tentang apa yang mereka katakan, dan kamu sekali-kali bukanlah seorang pemaksa terhadap mereka. Maka beri peringatanlah dengan Al Quran orang yang takut dengan ancaman-Ku.</h4>
 		</div>
 	</div>
-
+	<p><a href="51.html?bagian_51_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
