--- a/quran pengajian/assets/56.html
+++ b/quran pengajian/assets/56.html
@@ -1012,7 +1012,7 @@
 			<h4 class="isi">Maka bertasbihlah dengan (menyebut) nama Rabbmu yang Maha Besar.</h4>
 		</div>
 	</div>
-
+	<p><a href="57.html?bagian_57_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
