--- a/quran pengajian/assets/65.html
+++ b/quran pengajian/assets/65.html
@@ -172,7 +172,7 @@
 			<h4 class="isi">Allah-lah yang menciptakan tujuh langit dan seperti itu pula bumi. Perintah Allah berlaku padanya, agar kamu mengetahui bahwasanya Allah Maha Kuasa atas segala sesuatu, dan sesungguhnya Allah ilmu-Nya benar-benar meliputi segala sesuatu.</h4>
 		</div>
 	</div>
-
+	<p><a href="66.html?bagian_66_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
