--- a/quran pengajian/assets/66.html
+++ b/quran pengajian/assets/66.html
@@ -172,7 +172,7 @@
 			<h4 class="isi">dan (ingatlah) Maryam binti Imran yang memelihara kehormatannya, maka Kami tiupkan ke dalam rahimnya sebagian dari ruh (ciptaan) Kami, dan dia membenarkan kalimat Rabbnya dan Kitab-Kitab-Nya, dan dia adalah termasuk orang-orang yang taat.</h4>
 		</div>
 	</div>
-
+	<p><a href="67.html?bagian_67_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
