--- a/quran pengajian/assets/67.html
+++ b/quran pengajian/assets/67.html
@@ -352,7 +352,7 @@
 			<h4 class="isi">Katakanlah: 'Terangkanlah kepadaku jika sumber air kamu menjadi kering; maka siapakah yang akan mendatangkan air yang mengalir bagimu?'.</h4>
 		</div>
 	</div>
-
+	<p><a href="68.html?bagian_68_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
