--- a/quran pengajian/assets/63.html
+++ b/quran pengajian/assets/63.html
@@ -162,7 +162,7 @@
 			<h4 class="isi">Dan Allah sekali-kali tidak akan menangguhkan (kematian) seseorang apabila telah datang waktu kematiannya. Dan Allah Maha Mengenal apa yang kamu kerjakan.</h4>
 		</div>
 	</div>
-
+	<p><a href="64.html?bagian_64_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
