--- a/quran pengajian/assets/64.html
+++ b/quran pengajian/assets/64.html
@@ -232,7 +232,7 @@
 			<h4 class="isi">Yang mengetahui yang ghaib dan yang nyata. Yang Maha Perkasa lagi Maha Bijaksana.</h4>
 		</div>
 	</div>
-
+	<p><a href="65.html?bagian_65_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
