--- a/quran pengajian/assets/69.html
+++ b/quran pengajian/assets/69.html
@@ -572,7 +572,7 @@
 			<h4 class="isi">Maka bertasbihlah dengan (menyebut) nama Tuhanmu Yang Maha Besar.</h4>
 		</div>
 	</div>
-
+	<p><a href="70.html?bagian_70_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
