--- a/quran pengajian/assets/7.html
+++ b/quran pengajian/assets/7.html
@@ -2112,7 +2112,7 @@
 			<h4 class="isi">Sesungguhnya malaikat-malaikat yang ada di sisi Tuhanmu tidaklah merasa enggan menyembah Allah dan mereka mentasbihkan-Nya dan hanya kepada-Nya-lah mereka bersujud.</h4>
 		</div>
 	</div>
-
+	<p><a href="8.html?bagian_8_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
