--- a/quran pengajian/assets/70.html
+++ b/quran pengajian/assets/70.html
@@ -492,7 +492,7 @@
 			<h4 class="isi">dalam keadaan mereka menekurkan pandangannya (serta) diliputi kehinaan. Itulah hari yang dahulunya diancamkan kepada mereka.</h4>
 		</div>
 	</div>
-
+	<p><a href="71.html?bagian_71_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
