--- a/quran pengajian/assets/71.html
+++ b/quran pengajian/assets/71.html
@@ -332,7 +332,7 @@
 			<h4 class="isi">Ya Tuhanku! Ampunilah aku, ibu bapakku, orang yang masuk ke rumahku dengan beriman dan semua orang yang beriman laki-laki dan perempuan. Dan janganlah Engkau tambahkan bagi orang-orang yang zalim itu selain kebinasaan'.</h4>
 		</div>
 	</div>
-
+	<p><a href="72.html?bagian_72_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
