--- a/quran pengajian/assets/72.html
+++ b/quran pengajian/assets/72.html
@@ -332,7 +332,7 @@
 			<h4 class="isi">Supaya Dia mengetahui, bahwa sesungguhnya rasul-rasul itu telah menyampaikan risalah-risalah Tuhannya, sedang (sebenarnya) ilmu-Nya meliputi apa yang ada pada mereka, dan Dia menghitung segala sesuatu satu persatu.</h4>
 		</div>
 	</div>
-
+	<p><a href="73.html?bagian_73_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
