--- a/quran pengajian/assets/75.html
+++ b/quran pengajian/assets/75.html
@@ -452,7 +452,7 @@
 			<h4 class="isi">Bukankah (Allah yang berbuat) demikian berkuasa (pula) menghidupkan orang mati?</h4>
 		</div>
 	</div>
-
+	<p><a href="76.html?bagian_76_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
