--- a/quran pengajian/assets/77.html
+++ b/quran pengajian/assets/77.html
@@ -552,7 +552,7 @@
 			<h4 class="isi">Maka kepada perkataan apakah selain Al Quran ini mereka akan beriman?</h4>
 		</div>
 	</div>
-
+	<p><a href="78.html?bagian_78_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
