--- a/quran pengajian/assets/79.html
+++ b/quran pengajian/assets/79.html
@@ -512,7 +512,7 @@
 			<h4 class="isi">Pada hari mereka melihat hari berbangkit itu, mereka merasa seakan-akan tidak tinggal (di dunia) melainkan (sebentar saja) di waktu sore atau pagi hari.</h4>
 		</div>
 	</div>
-
+	<p><a href="80.html?bagian_80_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
