--- a/quran pengajian/assets/80.html
+++ b/quran pengajian/assets/80.html
@@ -472,7 +472,7 @@
 			<h4 class="isi">Mereka itulah orang-orang kafir lagi durhaka.</h4>
 		</div>
 	</div>
-
+	<p><a href="81.html?bagian_81_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
