--- a/quran pengajian/assets/84.html
+++ b/quran pengajian/assets/84.html
@@ -302,7 +302,7 @@
 			<h4 class="isi">tetapi orang-orang yang beriman dan beramal saleh, bagi mereka pahala yang tidak putus-putusnya.</h4>
 		</div>
 	</div>
-
+	<p><a href="85.html?bagian_85_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
