--- a/quran pengajian/assets/85.html
+++ b/quran pengajian/assets/85.html
@@ -272,7 +272,7 @@
 			<h4 class="isi">yang (tersimpan) dalam Lauh Mahfuzh.</h4>
 		</div>
 	</div>
-
+	<p><a href="86.html?bagian_86_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
