--- a/quran pengajian/assets/87.html
+++ b/quran pengajian/assets/87.html
@@ -242,7 +242,7 @@
 			<h4 class="isi">(yaitu) Kitab-kitab Ibrahim dan Musa</h4>
 		</div>
 	</div>
-
+	<p><a href="88.html?bagian_88_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
