--- a/quran pengajian/assets/88.html
+++ b/quran pengajian/assets/88.html
@@ -312,7 +312,7 @@
 			<h4 class="isi">kemudian sesungguhnya kewajiban Kami-lah menghisab mereka.</h4>
 		</div>
 	</div>
-
+	<p><a href="89.html?bagian_89_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
