--- a/quran pengajian/assets/89.html
+++ b/quran pengajian/assets/89.html
@@ -352,7 +352,7 @@
 			<h4 class="isi">masuklah ke dalam surga-Ku.</h4>
 		</div>
 	</div>
-
+	<p><a href="90.html?bagian_90_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
