--- a/quran pengajian/assets/9.html
+++ b/quran pengajian/assets/9.html
@@ -1342,7 +1342,7 @@
 			<h4 class="isi">Jika mereka berpaling (dari keimanan), maka katakanlah: 'Cukuplah Allah bagiku; tidak ada Tuhan selain Dia. Hanya kepada-Nya aku bertawakkal dan Dia adalah Tuhan yang memiliki 'Arsy yang agung'.</h4>
 		</div>
 	</div>
-
+	<p><a href="10.html?bagian_10_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
