--- a/quran pengajian/assets/90.html
+++ b/quran pengajian/assets/90.html
@@ -252,7 +252,7 @@
 			<h4 class="isi">Mereka berada dalam neraka yang ditutup rapat.</h4>
 		</div>
 	</div>
-
+	<p><a href="91.html?bagian_91_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
