--- a/quran pengajian/assets/93.html
+++ b/quran pengajian/assets/93.html
@@ -162,7 +162,7 @@
 			<h4 class="isi">Dan terhadap nikmat Tuhanmu, maka hendaklah kamu siarkan.</h4>
 		</div>
 	</div>
-
+	<p><a href="94.html?bagian_94_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
