--- a/quran pengajian/assets/78.html
+++ b/quran pengajian/assets/78.html
@@ -452,7 +452,7 @@
 			<h4 class="isi">Sesungguhnya Kami telah memperingatkan kepadamu (hai orang kafir) siksa yang dekat, pada hari manusia melihat apa yang telah diperbuat oleh kedua tangannya; dan orang kafir berkata: 'Alangkah baiknya sekiranya aku dahulu adalah tanah'.</h4>
 		</div>
 	</div>
-
+	<p><a href="79.html?bagian_79_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
