--- a/quran pengajian/assets/81.html
+++ b/quran pengajian/assets/81.html
@@ -342,7 +342,7 @@
 			<h4 class="isi">Dan kamu tidak dapat menghendaki (menempuh jalan itu) kecuali apabila dikehendaki Allah, Tuhan semesta alam.</h4>
 		</div>
 	</div>
-
+	<p><a href="82.html?bagian_82_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
