--- a/quran pengajian/assets/83.html
+++ b/quran pengajian/assets/83.html
@@ -412,7 +412,7 @@
 			<h4 class="isi">Sesungguhnya orang-orang kafir telah diberi ganjaran terhadap apa yang dahulu mereka kerjakan.</h4>
 		</div>
 	</div>
-
+	<p><a href="84.html?bagian_84_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
