--- a/quran pengajian/assets/91.html
+++ b/quran pengajian/assets/91.html
@@ -202,7 +202,7 @@
 			<h4 class="isi">dan Allah tidak takut terhadap akibat tindakan-Nya itu.</h4>
 		</div>
 	</div>
-
+	<p><a href="92.html?bagian_92_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
