--- a/quran pengajian/assets/95.html
+++ b/quran pengajian/assets/95.html
@@ -132,7 +132,7 @@
 			<h4 class="isi">Bukankah Allah Hakim yang seadil-adilnya?</h4>
 		</div>
 	</div>
-
+	<p><a href="96.html?bagian_96_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
