--- a/quran pengajian/assets/96.html
+++ b/quran pengajian/assets/96.html
@@ -242,7 +242,7 @@
 			<h4 class="isi">sekali-kali jangan, janganlah kamu patuh kepadanya; dan sujudlah dan dekatkanlah (dirimu kepada Tuhan).</h4>
 		</div>
 	</div>
-
+	<p><a href="97.html?bagian_97_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
