--- a/quran pengajian/assets/99.html
+++ b/quran pengajian/assets/99.html
@@ -132,7 +132,7 @@
 			<h4 class="isi">Dan barangsiapa yang mengerjakan kejahatan sebesar dzarrahpun, niscaya dia akan melihat (balasan)nya pula.</h4>
 		</div>
 	</div>
-
+	<p><a href="100.html?bagian_100_1" class="btn btn-default selanjutnya">Selanjutnya &rarr;</a></p>
 	</div>
 </body>
 </html>
