--- a/quran pengajian/assets/2.html
+++ b/quran pengajian/assets/2.html
@@ -1048,7 +1048,7 @@
 			<h2>100</h2>
 		</div>
 		<div class="col-xs-10">
-			<h2 class="arab">أَوَ كُلَّمَا عَٰهَدُواْ عَهۡدٗا نَّبَذَهُۥ فَرِيقٞ مِّنۡهُمۚ بَلۡ أَكۡثَرُهُمۡ لَا لَا يُؤۡمِنُونَ  </h2>
+			<h2 class="arab">أَوَ كُلَّمَا عَٰهَدُواْ عَهۡدٗا نَّبَذَهُۥ فَرِيقٞ مِّنۡهُمۚ بَلۡ أَكۡثَرُهُمۡ لَا يُؤۡمِنُونَ  </h2>
 			<h4 class="isi">Patutkah (mereka ingkar kepada ayat-ayat Allah), dan setiap kali mereka mengikat janji, segolongan mereka melemparkannya? Bahkan sebagian besar dari mereka tidak beriman.</h4>
 		</div>
 	</div>
@@ -1858,7 +1858,7 @@
 			<h2>181</h2>
 		</div>
 		<div class="col-xs-10">
-			<h2 class="arab">فَمَنۢ بَدَّلَهُۥ بَعۡدَ مَا سَمِعَهُۥ فَإِنَّمَآ فَإِنَّمَآ إِثۡمُهُۥ عَلَى ٱلَّذِينَ يُبَدِّلُونَهُۥٓۚ إِنَّ ٱللَّهَ سَمِيعٌ عَلِيمٞ  </h2>
+			<h2 class="arab">فَمَنۢ بَدَّلَهُۥ بَعۡدَ مَا سَمِعَهُۥ فَإِنَّمَآ إِثۡمُهُۥ عَلَى ٱلَّذِينَ يُبَدِّلُونَهُۥٓۚ إِنَّ ٱللَّهَ سَمِيعٌ عَلِيمٞ  </h2>
 			<h4 class="isi">Maka barangsiapa yang mengubah wasiat itu, setelah ia mendengarnya, maka sesungguhnya dosanya adalah bagi orang-orang yang mengubahnya. Sesungguhnya Allah Maha Mendengar lagi Maha Mengetahui.</h4>
 		</div>
 	</div>
