--- a/quran pengajian/assets/37.html
+++ b/quran pengajian/assets/37.html
@@ -1729,7 +1729,7 @@
 		</div>
 		<div class="col-xs-10">
 			<h2 class="arab">لَوۡ أَنَّ عِندَنَا ذِكۡرٗا مِّنَ ٱلۡأَوَّلِينَ  </h2>
-			<h4 class="isi">Kalau sekiranya di sksi kami ada sebuah kitab dari (kitab-kitab yang diturunkan) kepada orang-orang dahulu,</h4>
+			<h4 class="isi">Kalau sekiranya di sisi kami ada sebuah kitab dari (kitab-kitab yang diturunkan) kepada orang-orang dahulu,</h4>
 		</div>
 	</div>
 
