--- a/quran pengajian/assets/36.html
+++ b/quran pengajian/assets/36.html
@@ -758,7 +758,7 @@
 			<h2>71</h2>
 		</div>
 		<div class="col-xs-10">
-			<h2 class="arab">أَوَ لَمۡ يَرَوۡاْ أَنَّا خَلَقۡنَا لَهُم مِّمَّا عَمِلَتۡ أَيۡدِينَآ أَنۡعَٰمٗا فَهُمۡ لَهَا مَٰلِكُونَ مَٰلِكُونَ  </h2>
+			<h2 class="arab">أَوَ لَمۡ يَرَوۡاْ أَنَّا خَلَقۡنَا لَهُم مِّمَّا عَمِلَتۡ أَيۡدِينَآ أَنۡعَٰمٗا فَهُمۡ لَهَا مَٰلِكُونَ  </h2>
 			<h4 class="isi">Dan apakah mereka tidak melihat bahwa sesungguhnya Kami telah menciptakan binatang ternak untuk mereka yaitu sebahagian dari apa yang telah Kami ciptakan dengan kekuasaan Kami sendiri, lalu mereka menguasainya?</h4>
 		</div>
 	</div>
@@ -818,7 +818,7 @@
 			<h2>77</h2>
 		</div>
 		<div class="col-xs-10">
-			<h2 class="arab">أَوَ لَمۡ يَرَ ٱلۡإِنسَٰنُ أَنَّا خَلَقۡنَٰهُ خَلَقۡنَٰهُ مِن نُّطۡفَةٖ فَإِذَا هُوَ خَصِيمٞ مُّبِينٞ  </h2>
+			<h2 class="arab">أَوَ لَمۡ يَرَ ٱلۡإِنسَٰنُ أَنَّا خَلَقۡنَٰهُ مِن نُّطۡفَةٖ فَإِذَا هُوَ خَصِيمٞ مُّبِينٞ  </h2>
 			<h4 class="isi">Dan apakah manusia tidak memperhatikan bahwa Kami menciptakannya dari setitik air (mani), maka tiba-tiba ia menjadi penantang yang nyata!</h4>
 		</div>
 	</div>
@@ -858,7 +858,7 @@
 			<h2>81</h2>
 		</div>
 		<div class="col-xs-10">
-			<h2 class="arab">أَوَ لَيۡسَ ٱلَّذِي خَلَقَ ٱلسَّمَٰوَٰتِ وَٱلۡأَرۡضَ بِقَٰدِرٍ بِقَٰدِرٍ عَلَىٰٓ أَن يَخۡلُقَ مِثۡلَهُمۚ بَلَىٰ وَهُوَ ٱلۡخَلَّٰقُ ٱلۡعَلِيمُ  </h2>
+			<h2 class="arab">أَوَ لَيۡسَ ٱلَّذِي خَلَقَ ٱلسَّمَٰوَٰتِ وَٱلۡأَرۡضَ بِقَٰدِرٍ عَلَىٰٓ أَن يَخۡلُقَ مِثۡلَهُمۚ بَلَىٰ وَهُوَ ٱلۡخَلَّٰقُ ٱلۡعَلِيمُ  </h2>
 			<h4 class="isi">Dan tidaklah Tuhan yang menciptakan langit dan bumi itu berkuasa menciptakan yang serupa dengan itu? Benar, Dia berkuasa. Dan Dialah Maha Pencipta lagi Maha Mengetahui.</h4>
 		</div>
 	</div>
