--- a/quran pengajian/assets/37.html
+++ b/quran pengajian/assets/37.html
@@ -218,7 +218,7 @@
 			<h2>17</h2>
 		</div>
 		<div class="col-xs-10">
-			<h2 class="arab">أَوَ ءَابَآؤُنَا ٱلۡأَوَّلُونَ قُلۡ  </h2>
+			<h2 class="arab">أَوَ ءَابَآؤُنَا ٱلۡأَوَّلُونَ  </h2>
 			<h4 class="isi">Dan apakah bapak-bapak kami yang telah terdahulu (akan dibangkitkan pula)'?</h4>
 		</div>
 	</div>
@@ -228,7 +228,7 @@
 			<h2>18</h2>
 		</div>
 		<div class="col-xs-10">
-			<h2 class="arab">نَعَمۡ وَأَنتُمۡ دَٰخِرُونَ فَإِنَّمَا  </h2>
+			<h2 class="arab">قُلۡ نَعَمۡ وَأَنتُمۡ دَٰخِرُونَ</h2>
 			<h4 class="isi">Katakanlah: 'Ya, dan kamu akan terhina'</h4>
 		</div>
 	</div>
