--- a/family/assets/index.html
+++ b/family/assets/index.html
@@ -1,58 +1,10 @@
 ---
 family:
-  - 318.jpg
-  - 319 ht.jpg
-  - 338.jpg
-  - 339 a.jpg
-  - 339 h.jpg
-  - 5863.jpg
-  - 586.jpg
-  - 5923.jpg
-  - 5963.jpg
-  - 5973.jpg
-  - 598 p.jpg
-  - 718 a.jpg
-  - 7233 t.jpg
-  - 738.jpg
-  - 7763.jpg
-  - 776.jpg
-  - 7973.jpg
-  - 823 at.jpg
-  - 823 ft.jpg
-  - 823 mt.jpg
-  - 845 dt.jpg
-  - 845 ft.jpg
-  - 845 gt.jpg
-  - 853 at.jpg
-  - 853 dt.jpg
-  - 853 ft.jpg
-  - 853 gt.jpg
-  - 853 mt.jpg
-  - 893 at.jpg
-  - 893 ct.jpg
-  - 902 k.jpg
-  - 9061 t.jpg
-  - 906.jpg
-  - 9231 t.jpg
-  - 9236 t.jpg
-  - 923 dt.jpg
-  - 923 kt.jpg
-  - 923 pt.jpg
-  - 938.jpg
-  - 943 kt.jpg
-  - 9931 t.jpg
-  - 9933 t.jpg
-  - 993 at.jpg
-  - 993 dt.jpg
-  - 993 gt.jpg
-  - 993 kt.jpg
-  - 993 mt.jpg
-  - 993 pt.jpg
   - 101.jpg
   - 136.jpg
   - 138.jpg
-  - 1738.jpg
   - 173.jpg
+  - 1738.jpg
   - 1815.jpg
   - 1816.jpg
   - 1817.jpg
@@ -78,17 +30,64 @@ family:
   - 2213.jpg
   - 2218.jpg
   - 238.jpg
-  - 323.jpg
+  - 318.jpg
+  - 319 ht.jpg
   - 323 juga.jpg
+  - 323.jpg
+  - 338.jpg
+  - 339 a.jpg
+  - 339 h.jpg
   - 3712.jpg
   - 5519.jpg
   - 551b.jpg
+  - 586.jpg
+  - 5863.jpg
+  - 5923.jpg
+  - 5963.jpg
+  - 5973.jpg
+  - 598 p.jpg
   - 6619.jpg
   - 661b.jpg
   - 718a.jpg
+  - 7233 t.jpg
+  - 738.jpg
   - 7718.jpg
   - 7758.jpg
+  - 776.jpg
+  - 7763.jpg
+  - 7973.jpg
+  - 823 at.jpg
+  - 823 ft.jpg
+  - 823 mt.jpg
   - 8288.jpg
+  - 845 dt.jpg
+  - 845 ft.jpg
+  - 845 gt.jpg
+  - 853 at.jpg
+  - 853 dt.jpg
+  - 853 ft.jpg
+  - 853 gt.jpg
+  - 853 mt.jpg
+  - 893 at.jpg
+  - 893 ct.jpg
+  - 902 k.jpg
+  - 906.jpg
+  - 9061 t.jpg
+  - 923 dt.jpg
+  - 923 kt.jpg
+  - 923 pt.jpg
+  - 9231 t.jpg
+  - 9236 t.jpg
+  - 938.jpg
+  - 943 kt.jpg
+  - 993 at.jpg
+  - 993 dt.jpg
+  - 993 gt.jpg
+  - 993 kt.jpg
+  - 993 mt.jpg
+  - 993 pt.jpg
+  - 9931 t.jpg
+  - 9933 t.jpg
 ---
 
 <!DOCTYPE html>
@@ -179,6 +178,7 @@ family:
 		$('.hapus').each(function(){
 			$(this).click(function(){
 				$(this).parent().find('.form-control').val('')
+				$('.bagian').show()
 			})
 		})
 	</script>
