--- a/quran pengajian/assets/6.html
+++ b/quran pengajian/assets/6.html
@@ -961,7 +961,7 @@
 			<h2>91</h2>
 		</div>
 		<div class="col-xs-10">
-			<h2 class="arab">وَمَا قَدَرُواْ ٱللَّهَ حَقَّ قَدۡرِهِۦٓ إِذۡ قَالُواْ مَآ أَنزَلَ ٱللَّهُ عَلَىٰ بَشَرٖ مِّن شَيۡءٖۗ قُلۡ مَنۡ أَنزَلَ ٱلۡكِتَٰبَ ٱلَّذِي جَآءَ بِهِۦ مُوسَىٰ نُورٗا وَهُدٗى لِّلنَّاسِۖ تَجۡعَلُونَهُۥ قَرَاطِيسَ تُبۡدُونَهَا وَتُخۡفُونَ كَثِيرٗاۖ وَعُلِّمۡتُم مَّا لَمۡ تَعۡلَمُوٓاْ أَنتُمۡ وَلَآ ءَابَآؤُكُمۡۖ قُلِ ٱللَّهُۖ ثُمَّ ذَرۡهُمۡ فِي خَوۡضِهِمۡ يَلۡعَبُونَ  </h2>
+			<h2 class="arab">وَمَا قَدَرُوا اللّٰهَ حَقَّ قَدْرِهٖٓ اِذْ قَالُوْا مَآ اَنْزَلَ اللّٰهُ عَلٰى بَشَرٍ مِّنْ شَيْءٍۗ قُلْ مَنْ اَنْزَلَ الْكِتٰبَ الَّذِيْ جَاۤءَ بِهٖ مُوْسٰى نُوْرًا وَّهُدًى لِّلنَّاسِ تَجْعَلُوْنَهٗ قَرَاطِيْسَ تُبْدُوْنَهَا وَتُخْفُوْنَ كَثِيْرًاۚ وَعُلِّمْتُمْ مَّا لَمْ تَعْلَمُوْٓا اَنْتُمْ وَلَآ اٰبَاۤؤُكُمْ ۗقُلِ اللّٰهُ ۙثُمَّ ذَرْهُمْ فِيْ خَوْضِهِمْ يَلْعَبُوْنَ </h2>
 			<h4 class="isi">Dan mereka tidak menghormati Allah dengan penghormatan yang semestinya, di kala mereka berkata: 'Allah tidak menurunkan sesuatupun kepada manusia'. Katakanlah: 'Siapakah yang menurunkan kitab (Taurat) yang dibawa oleh Musa sebagai cahaya dan petunjuk bagi manusia, kamu jadikan kitab itu lembaran-lembaran kertas yang bercerai-berai, kamu perlihatkan (sebahagiannya) dan kamu sembunyikan sebahagian besarnya, padahal telah diajarkan kepadamu apa yang kamu dan bapak-bapak kamu tidak mengetahui(nya)?' Katakanlah: 'Allah-lah (yang menurunkannya)', kemudian (sesudah kamu menyampaikan Al Quran kepada mereka), biarkanlah mereka bermain-main dalam kesesatannya.</h4>
 		</div>
 	</div>
