--- a/sanggar baca caraka/assets/index.html
+++ b/sanggar baca caraka/assets/index.html
@@ -125,7 +125,7 @@ nama:
 			</div>
 			<div class="form-group">
 				<input type="submit" class="btn btn-success submit" value="Lapor baca">
-				<a href="#!" class="btn btn-danger pull-right reset">Reset</a>
+				<a href="#!" class="btn btn-danger pull-right reset">Ganti buku</a>
 			</div>
 		</form>
 	</div>
@@ -164,6 +164,13 @@ nama:
 		})
 		$('.reset').click(function(x){
 			x.preventDefault()
+			localStorage.setItem('judul', '')
+			localStorage.setItem('penulis', '')
+			localStorage.setItem('total', '')
+			localStorage.setItem('halaman-kemarin', '0')
+			localStorage.setItem('halaman-hari-ini', '')
+			localStorage.setItem('review', '')
+			location.href = 'index.html'
 		})
 		$('.edit').click(function(){
 			if ($('.halaman-kemarin').attr('readonly')){
